--- a/src/routes/(sheet)/footer/sheetFooter.module.css
+++ b/src/routes/(sheet)/footer/sheetFooter.module.css
@@ -1,8 +1,4 @@
 .sheetFooter {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,4 +8,5 @@
   backdrop-filter: none;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   z-index: 10;
+  /* Removed position: absolute - now natural grid child */
 }
